# Simple-Neural-Network

./: .gitignore  README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
datasets/sine/: test.npz  train.npz  valid.npz
datasets/spiral/: test.npz  train.npz  valid.npz
datasets/xor/: xor.npz
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: config.md  data.md  layers.md  losses.md  metrics.md  models.md  optimizers.md  persistence.md  training.md
docs/architecture/: base-layer.md  data-flow.md  overview.md
docs/datasets/: sine.md  spiral.md  xor.md
docs/development/: code-style.md  contributing.md  testing.md
docs/examples/: sine-regression.md  spiral-classification.md  xor-classification.md
docs/guide/: getting-started.md  quick-example.md
docs/math/: activations.md  backward-propagation.md  forward-propagation.md  gradient-descent.md  loss-functions.md  perceptron.md  xavier-init.md
docs/training-guide/: metrics-and-evaluation.md  model-persistence.md  training-loop.md
src/: __init__.py
src/nn/: __init__.py
src/nn/data/: __init__.py  dataGenerator.py  dataLoader.py
src/nn/layers/: __init__.py  activationLayer.py  baseLayer.py  linearLayer.py
src/nn/losses/: __init__.py  crossEntropyLoss.py  mseLoss.py
tests/: testActivationLayer.py  testCheckpointIO.py  testCrossEntropyLoss.py  testDataGenerator.py  testDatasetLoader.py  testLinearLayer.py  testMSELoss.py  testMetrics.py  testSequentialModel.py  testSgdOptimizer.py  testTrainer.py
(+9 files in other folders)
